Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -42,11 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = ['Homer', 'Marge', 'Bart', 'Maggie', 'Lisa']"
+    "names = ['Homer', 'Marge', 'Bart', 'Maggie', 'Lisa']\n"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -77,13 +77,13 @@
        "'Homer Simpson'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "add_simpson(\"Homer\")"
+    "add_simpson(\"Homer\")\n"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
